2021-04-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (popob): Use jitter macros instead of pvm
	calls to access the runtime state.
	(pushend): Likewise.
	(popend): Likewise.
	(pushob): Likewise.
	(pushom): Likewise.
	(popom): Likewise.
	(pushoo): Likewise.
	(popoo): Likewise.
	(pushoi): Likewise.
	(popoi): Likewise.
	(pushod): Likewise.
	(popod): Likewise.
	(popoac): Likewise.
	(pushopp): Likewise.
	(popopp): Likewise.

2021-04-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_op_rela): Handle function
	arguments.
	* libpoke/pkl-promo.c (pkl_promo_ps_op_rela): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_ps_op_rela): Likewise.
	* libpoke/pkl-insn.def: New instructions PKL_INSN_EQC and
	PKL_INSN_NEC.
	* libpoke/pvm.jitter (eqc): New instruction.
	(nec): Likewise.
	* libpoke/pkl-asm.c (pkl_asm_insn_cmp): Support EQ and NE for
	function values.
	* doc/poke.texi (Function Comparison): New section.
	* testsuite/poke.pkl/gt-functions-diag-1.pk: New test.
	* testsuite/poke.pkl/ge-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/le-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/lt-functions-diag-1.pk: Likewise.
	* testsuite/poke.pkl/ne-functions-2.pk: Likewise.
	* testsuite/poke.pkl/ne-functions-1.pk: Likewise.
	* testsuite/poke.pkl/eq-functions-2.pk: Likewise.
	* testsuite/poke.pkl/eq-functions-1.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-04-05  Egeyar Bagcioglu  <egeyar@gmail.com>

	* etc/git-hooks/pre-push: Report it clearly when the pre-push hook
	fails due to remote containing unfetched commits.

2021-04-03  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.h (struct pkl_trans_payload): Add endianness
	stack.
	(pkl_trans_init_payload): Initialize endian.
	* libpoke/pkl-trans.c (PKL_TRANS_ENDIAN): Define.
	(PKL_TRANS_PUSH_ENDIAN): Likewise.
	(PKL_TRANS_POP_ENDIAN): Likewise.
	(pkl_trans1_pr_struct_type_field): New handler.
	(pkl_trans1_ps_struct_type_field): Likewise.