@@ -1751,6 +1751,16 @@ Description:
 + section from array and struct constructor sections.
 Target: 1.0
 
+Summary: support casts from `any' to function types
+Kind: ENH
+Component: Compiler
+Component: PVM
+Priority: 3
+Description: 
++ Right now we are not allowing casting from `any' to a function type.
++ Supporting this requires to tag the PVM closure values with their
++ corresponding type.
+
 %rec: Release
 %key: Version
 %type: Version regexp /^[0-9]+\.[0-9]+$/
